# snake-rs

./: .gitignore  .vercelignore  CREDITS.md  Cargo.toml  README.md  vercel.json
scripts/: build-web.sh
src/: audio.rs  game.rs  main.rs  persistence.rs  settings.rs
web/: index.html
