[package]
name = "snake-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
dirs = "5"
macroquad = { version = "0.4", features = ["audio"] }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[patch.crates-io]
miniquad = { path = "vendor/miniquad" }
